<resources>

    <string name="app_name">Weberz</string>
    <string name="action_settings">Settings</string>
    <string name="ScanaCard">Scan a Card</string>
    <string name="Contacts">Contacts</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="RegistrationPage">Register</string>
    <string name="OK">OK</string>
    <string name="title_activity_registrationscreen">Register</string>
    <string name="server_url">http://xesoftwares.com/contactsapi/</string>
    <string name="TakePicture">Take Picture</string>
    <string name="Login">Login</string>
    <string name="ForgetPassword">Unable to sign in?</string>
    <string name="LoginScreen">LoginScreen</string>
    <string name="name">full name</string>
    <string name="Userid">User Id</string>
    <string name="Mobileno.">mobile no</string>
    <string name="Emailid">email</string>
    <string name="ConfirmPassword">confirm password</string>
    <string name="Register">Register</string>
    <string name="cardName">Card Name</string>
    <string name="Name">Name</string>
    <string name="Telepheno_no">Telepheno No</string>
    <string name="Compancy_name">Compancy Name</string>
    <string name="Department">Department</string>
    <string name="Jod_title">job title</string>
    <string name="Home_Address">home address</string>
    <string name="Work_address">work address</string>
    <string name="Status">work phone</string>
    <string name="userid">User ID</string>
    <string name="profile">Profile</string>
    <string name="fullname">fullname</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="takepicture">Take Picture</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="Profileheader">My Profile</string>
    <string name="signUp">Sign up</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="View">View</string>
    <string name="title_activity_main2">Register</string>
    <string name="title_activity_login"></string>
    <string name="title_activity_pending_invites">PendingInvitesActivity</string>
    <string name="title_activity_preference">preference</string>

</resources>
