<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/parentLayout"
        android:background="@color/colorPrimary"
        tools:context=".Activities.LoginActivity">


       <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout5"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_gravity="center">

            <EditText
                android:layout_width="255dp"
                android:layout_height="50dp"
                android:id="@+id/edtusername"
                android:hint="@string/Username"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:minHeight="30dp"
                android:inputType="text"
                android:layout_gravity="center"
                android:singleLine="true"
                android:textStyle="normal"
                android:layout_alignParentTop="false"
                android:layout_alignParentStart="false"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/edtpass" />

           <EditText
                android:layout_width="255dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtpass"
                android:layout_gravity="center"
                android:textColorHint="#ffffff"
                android:hint="@string/Password"
                android:password="true"
               android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHighlight="#ffffff"
               android:layout_marginBottom="30dp"
               android:layout_above="@+id/btnsignin"
               android:layout_alignEnd="@+id/edtusername" />


            <Button
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:id="@+id/btnsignin"
                android:minHeight="30dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#C2185B"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:gravity="center_vertical|center_horizontal" />
            <Button
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/btnsignup"
                android:minHeight="30dp"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/btnsignin"
                android:layout_alignLeft="@+id/btnsignin"
                android:layout_alignStart="@+id/btnsignin"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/ForgetPassword"
                android:id="@+id/btnforgotpassword"
                android:minHeight="30dp"
                android:textColor="#ffffff"
                android:textStyle="normal"
                android:background="@android:color/transparent"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp" />

        </RelativeLayout>

    </RelativeLayout>